<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <ImageView
            android:id="@+id/detail_movie_cover"
            android:layout_width="wrap_content"
            android:layout_height="225dp"
            android:foreground="@drawable/gradient_bg"
            android:foregroundTintMode="screen"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <ImageView
            android:id="@+id/detail_movie_adult"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:src="@drawable/icons18"
            app:layout_constraintStart_toStartOf="@id/detail_movie_cover"
            app:layout_constraintTop_toTopOf="@id/detail_movie_cover"
            />

        <ImageView
            android:id="@+id/detail_movie_img"
            android:layout_width="125dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:foreground="@drawable/gradient_bg"
            android:foregroundTintMode="screen"
            android:scaleType="centerCrop"
            android:transitionName="sharedName"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover"
            app:srcCompat="@drawable/themartian"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/detail_movie_rate"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

        <TextView
            android:id="@+id/detail_movie_genres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_title" />

        <TextView
            android:id="@+id/detail_movie_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="TextView"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_date_name"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_genres" />

        <TextView
            android:id="@+id/detail_movie_date_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="16dp"
            android:text="@string/release_date"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/detail_movie_date"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_genres" />

        <TextView
            android:id="@+id/detail_movie_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:text="100%"
            android:textColor="@color/text_light_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/detail_movie_genres"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_title"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/detail_movie_desc_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/description"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/detail_movie_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_date"/>

        <TextView
            android:id="@+id/detail_movie_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="8dp"
            android:paddingBottom="10dp"
            android:text="test text test text test text test text test text test text test text test text test text "
            android:textColor="@color/text_light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_desc_name" />

        <TextView
            android:id="@+id/detail_movie_credits_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/artists"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/Rv_credits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_desc"/>

        <TextView
            android:id="@+id/detail_movie_credits_none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/casts_n_available"
            android:textAllCaps="false"
            android:textColor="@color/text_light_blue"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_credits_name"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Rv_credits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_credits_name"/>

        <TextView
            android:id="@+id/detail_movie_trailers_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="10dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/trailers"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@id/Rv_trailers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rv_credits"/>

        <TextView
            android:id="@+id/detail_movie_trailers_none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/trailers_n_available"
            android:textAllCaps="false"
            android:textColor="@color/text_light_blue"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/Rv_trailers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_trailers_name"
            app:layout_constraintVertical_bias="0.2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Rv_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_trailers_name"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>